# rolex-reservation-assistant

./: .gitignore  CODEX.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
ci/: run_ci.py
config/: applicant.example.json  selectors.mock.json
docs/: architecture.md  captcha-provider-decision.md  gpt-image-architecture-prompt.md  input-verification.md  setup.md
docs/ci/: README.md  ci-status.md  python-ci.yml
scripts/: install_github_actions_workflow.py  run_mock_site.py
src/rolex_reservation_assistant/: __init__.py  __main__.py  applicant.py  application_text.py  audit.py  captcha.py  crypto_profile.py  deadline.py  destinations.py  e2e.py  guardrails.py  input_plan.py  preferences.py  rehearsal.py  render.py  validation.py
tests/: test_applicant_and_preferences.py  test_captcha_deadline_guardrails.py  test_crypto_profile.py  test_e2e_and_rehearsal.py  test_validation.py
